--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,17 @@
+
+
+
 body {
 
-.parent {
-display: grid;
-grid-template-columns: repeat(5, 1fr);
-grid-template-rows: repeat(5, 1fr);
-grid-column-gap: 0px;
-grid-row-gap: 0px;
-}
 
-.div1 { grid-area: 1 / 1 / 5 / 2; }
-.div2 { grid-area: 1 / 4 / 5 / 5; }
-.div3 { grid-area: 1 / 2 / 2 / 4; }
-.div4 { grid-area: 2 / 2 / 4 / 4; }
-.div5 { grid-area: 4 / 2 / 5 / 4; }
-	
 	
 background: #DEC1B2;
 
-background-image: url("\images\title_lorem");
+background-image: url("himg");
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-position: 50% 10%;
-background-image: url("\images\title_lorem"), linear-gradient( 0deg, #F4CEC1 10%, #EAA494 100%);
+background-image: url("img"), linear-gradient( 0deg, #ffcccc 40%, #ffffff 100%);
 
 
 
@@ -38,17 +28,80 @@ text-transform: none;
 
 
 
-#threeparagraph {
--webkit-column-count: 3;
--moz-column-count: 3;
-column-count: 3;
--webkit-column-gap: 10px;
--moz-column-gap: 10px;
-column-gap: 10px;
--webkit-column-rule: 1px solid rgba(28,110,164,0.5);
--moz-column-rule: 1px solid rgba(28,110,164,0.5);
-column-rule: 1px solid rgba(28,110,164,0.5);
+
+
+}
+.navigation {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+  
+  list-style: none;
+  margin: 0; 
+  background: grey;
 }
 
+.navigation a {
+  text-decoration: none;
+  display: block;
+  padding: 1em;
+  color: white;
+}
 
+.navigation a:hover {
+  background: #1565C0;
+}
+
+@media all and (max-width: 800px) {
+  .navigation {
+    justify-content: space-around;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .navigation {
+    flex-flow: column wrap;
+    padding: 0;
+  }
+  .navigation a { 
+    text-align: center; 
+    padding: 10px;
+    border-top: 1px solid rgba(255, 255, 255,0.3); 
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1); 
+  }
+  .navigation li:last-of-type a {
+    border-bottom: none;
+  }
+}
+.flex-container {
+  /* We first create a flex layout context */
+  display: flex;
+  
+  /* Then we define the flow direction 
+     and if we allow the items to wrap 
+   * Remember this is the same as:
+   * flex-direction: row;
+   * flex-wrap: wrap;
+   */
+  flex-flow: row wrap;
+  
+  /* Then we define how is distributed the remaining space */
+  justify-content: space-around;
+  
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.flex-item {
+  background: transparent;
+  padding: 5px;
+  width: 500px;
+  height: 500px;
+  margin-top: 100px;
+  line-height: 18px;
+  color: grey;
+  font-weight: bold;
+  font-size: 12;
+  text-align: center;
 }
